# maxima_interface

./: .pre-commit-config.yaml  LICENSE  README.md  example.py  maxima.py  maxima_interface.py  maxima_notes.md  pyproject.toml  requirements.txt
maxima_interface/: __init__.py  maxima_interface.py
src/maxima_interface/: __init__.py
test/: test_maxima_interface.py
tests/: test_maxima_interface.py
